# om-feeling-like

./: CMakeLists.txt  om-feeling-like
presets/OpenMandriva/: description.html  install
presets/Plasma/: description.html  install
presets/Plasma_Dark/: description.html  install
presets/Ubuntu/: depends  description.html  install
presets/Windows/: depends  description.html  install
presets/Windows_7/: depends  description.html  install
presets/macOS/: description.html  install
presets/macOS_Dark/: depends  description.html  install
src/: CMakeLists.txt  MainDialog.cpp  MainDialog.h  RTPushButton.cpp  RTPushButton.h  Rpm.cpp  Rpm.h  main.cpp  om-feeling-like.desktop
